# treemaker

./: .gitignore  CMakeLists.txt  README.md  README.txt  UPDATE.md  static_bugs_todo.md  updates.md
Source/: CMakeLists.txt  tmHeader.cpp  tmHeader.h  tmPrec.cpp  tmTree.h  tmVersion.h
Source/about/: about.htm
Source/test/: tmArrayTester.cpp  tmDpptrTester.cpp  tmNewtonRaphsonTester.cpp
Source/test/tmModelTester/: tmModelTester.cpp
Source/test/tmNLCOTester/: tmNLCOTester.cpp  tmNLCOTester.h
Source/tmModel/: CMakeLists.txt  tmModel.h  tmModel_fwd.h
Source/tmModel/tmNLCO/: tmNLCO.cpp  tmNLCO.h  tmNLCO_alm.cpp  tmNLCO_alm.h  tmNLCO_cfsqp.cpp  tmNLCO_cfsqp.h  tmNLCO_rfsqp.cpp  tmNLCO_rfsqp.h  tmNLCO_wnlib.cpp  tmNLCO_wnlib.h
Source/tmModel/tmOptimizers/: tmConstraintFns.cpp  tmConstraintFns.h  tmEdgeOptimizer.cpp  tmEdgeOptimizer.h  tmOptimizer.cpp  tmOptimizer.h  tmScaleOptimizer.cpp  tmScaleOptimizer.h  tmStrainOptimizer.cpp  tmStrainOptimizer.h
Source/tmModel/tmPtrClasses/: tmArray.h  tmArrayIterator.h  tmDpptr.h  tmDpptrArray.h  tmDpptrSrc.h  tmDpptrTarget.cpp  tmDpptrTarget.h  tmPtrClasses.h
Source/tmModel/tmSolvers/: tmMatrix.h  tmNewtonRaphson.h  tmStubFinder.cpp  tmStubFinder.h
Source/tmModel/tmTreeClasses/: tmCluster.cpp  tmCluster.h  tmCondition.cpp  tmCondition.h  tmConditionEdgeLengthFixed.cpp  tmConditionEdgeLengthFixed.h  tmConditionEdgesSameStrain.cpp  tmConditionEdgesSameStrain.h  tmConditionNodeCombo.cpp  tmConditionNodeCombo.h  tmConditionNodeFixed.cpp  tmConditionNodeFixed.h  tmConditionNodeOnCorner.cpp  tmConditionNodeOnCorner.h  tmConditionNodeOnEdge.cpp  tmConditionNodeOnEdge.h  tmConditionNodeSymmetric.cpp  tmConditionNodeSymmetric.h  tmConditionNodesCollinear.cpp  tmConditionNodesCollinear.h  tmConditionNodesPaired.cpp  tmConditionNodesPaired.h  tmConditionOwner.cpp  tmConditionOwner.h  tmConditionPathActive.cpp  tmConditionPathActive.h  tmConditionPathAngleFixed.cpp  tmConditionPathAngleFixed.h  tmConditionPathAngleQuant.cpp  tmConditionPathAngleQuant.h  tmConditionPathCombo.cpp  tmConditionPathCombo.h  tmCrease.cpp  tmCrease.h  tmCreaseOwner.cpp  tmCreaseOwner.h  tmEdge.cpp  tmEdge.h  tmEdgeOwner.cpp  tmEdgeOwner.h  (+34 more)
Source/tmModel/wnlib/conjdir/: wnparvect.cpp  wnparvect.h  wntol.c
Source/tmModel/wnlib/low/: wnasrt.c
Source/tmModel/wnlib/mem/: wnmbtr.c  wnmbtr.h  wnmem.c  wnmemg.c
Source/tmModel/wnlib/random/: wnrnd.c
Source/tmModel/wnlib/vect/: wndot.c  wnvect.c  wnvect.h  wnvgen.c
Source/tmwxGUI/: CMakeLists.txt
Source/tmwxGUI/tmwxCommon/: tmwxApp.cpp  tmwxApp.h  tmwxCommand.cpp  tmwxCommand.h  tmwxDocManager.cpp  tmwxDocManager.h  tmwxGUI_fwd.h  tmwxGetUserInputDialog.cpp  tmwxGetUserInputDialog.h  tmwxPersistentFrame.cpp  tmwxPersistentFrame.h  tmwxStr.cpp  tmwxStr.h
Source/tmwxGUI/tmwxDocView/: tmwxDesignCanvas.cpp  tmwxDesignCanvas.h  tmwxDesignFrame.cpp  tmwxDesignFrame.h  tmwxDoc.cpp  tmwxDoc.h  tmwxDoc_Action.cpp  tmwxDoc_Condition.cpp  tmwxDoc_Debug.cpp  tmwxDoc_Edit.cpp  tmwxDoc_File.cpp  tmwxDoc_View.cpp  tmwxPrintout.cpp  tmwxPrintout.h  tmwxView.cpp  tmwxView.h
Source/tmwxGUI/tmwxFoldedForm/: tmwxFoldedFormFrame.cpp  tmwxFoldedFormFrame.h
Source/tmwxGUI/tmwxHtmlHelp/: tmwxHtmlHelpController.cpp  tmwxHtmlHelpController.h  tmwxHtmlHelpFrame.cpp  tmwxHtmlHelpFrame.h
Source/tmwxGUI/tmwxInspector/: tmwxConditionEdgeLengthFixedPanel.cpp  tmwxConditionEdgeLengthFixedPanel.h  tmwxConditionEdgesSameStrainPanel.cpp  tmwxConditionEdgesSameStrainPanel.h  tmwxConditionListBox.cpp  tmwxConditionListBox.h  tmwxConditionNodeComboPanel.cpp  tmwxConditionNodeComboPanel.h  tmwxConditionNodeFixedPanel.cpp  tmwxConditionNodeFixedPanel.h  tmwxConditionNodeOnCornerPanel.cpp  tmwxConditionNodeOnCornerPanel.h  tmwxConditionNodeOnEdgePanel.cpp  tmwxConditionNodeOnEdgePanel.h  tmwxConditionNodeSymmetricPanel.cpp  tmwxConditionNodeSymmetricPanel.h  tmwxConditionNodesCollinearPanel.cpp  tmwxConditionNodesCollinearPanel.h  tmwxConditionNodesPairedPanel.cpp  tmwxConditionNodesPairedPanel.h  tmwxConditionPathActivePanel.cpp  tmwxConditionPathActivePanel.h  tmwxConditionPathAngleFixedPanel.cpp  tmwxConditionPathAngleFixedPanel.h  tmwxConditionPathAngleQuantPanel.cpp  tmwxConditionPathAngleQuantPanel.h  tmwxConditionPathComboPanel.cpp  tmwxConditionPathComboPanel.h  tmwxCreasePanel.cpp  tmwxCreasePanel.h  tmwxEdgePanel.cpp  tmwxEdgePanel.h  tmwxFacetPanel.cpp  tmwxFacetPanel.h  tmwxGroupPanel.cpp  tmwxGroupPanel.h  tmwxInspectorFrame.cpp  tmwxInspectorFrame.h  tmwxInspectorPanel.cpp  tmwxInspectorPanel.h  (+10 more)
Source/tmwxGUI/tmwxLogFrame/: tmwxLogFrame.cpp  tmwxLogFrame.h
Source/tmwxGUI/tmwxOptimizerDialog/: tmwxOptimizerDialog.h  tmwxOptimizerDialog_cmn.cpp  tmwxOptimizerDialog_gtk.cpp  tmwxOptimizerDialog_mac.cpp  tmwxOptimizerDialog_mac.h
Source/tmwxGUI/tmwxPalette/: tmwxButtonMini.cpp  tmwxButtonMini.h  tmwxButtonSmall.cpp  tmwxButtonSmall.h  tmwxCheckBox.cpp  tmwxCheckBox.h  tmwxCheckBoxSmall.cpp  tmwxCheckBoxSmall.h  tmwxPaletteFrame.cpp  tmwxPaletteFrame.h  tmwxPalettePanel.cpp  tmwxPalettePanel.h  tmwxRadioBoxSmall.cpp  tmwxRadioBoxSmall.h  tmwxStaticText.cpp  tmwxStaticText.h  tmwxTextCtrl.cpp  tmwxTextCtrl.h
Source/tmwxGUI/tmwxViewSettings/: tmwxViewSettings.cpp  tmwxViewSettings.h  tmwxViewSettingsFrame.cpp  tmwxViewSettingsFrame.h  tmwxViewSettingsPanel.cpp  tmwxViewSettingsPanel.h
bugs/: segfault_wxevthandler.md
mac/: analyze-tm-modern.sh  build-tm-help.sh  build-tm-modern.sh
mac/TreeMaker.xcodeproj/: project.pbxproj
mac/analysis-results/2025-01-29-222916-20681-1/: index.html  report-007374.html  report-0475e7.html  report-056db6.html  report-07761a.html  report-08ab75.html  report-09d502.html  report-0a2ad8.html  report-0d663a.html  report-0db5b5.html  report-16497c.html  report-19a293.html  report-1b4a83.html  report-1bb4b6.html  report-1c8244.html  report-248289.html  report-24c031.html  report-25e58f.html  report-262e97.html  report-2cc90a.html  report-2db79b.html  report-365715.html  report-3672a9.html  report-36960a.html  report-38c576.html  report-3a93c9.html  (+80 more)
mac/resources/: Info.plist  treemaker.plist
(+22 files in other folders)
